# MSIG

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  main.py  pyproject.toml  rgg-table Kanban-доска.md  road_map.md  schema_ver2.canvas
.obsidian/: workspace.json
game_engine/: game_rules.py  interfaces_game_rules.py  manager_db_connect.py  readme.md  struct_game_rules.py
game_engine/tests/: test_game_rules.py  test_game_rules_interface.py
game_rules/: readme.md
readme/: Disclamer.md  description.md  game_engine.md  game_rules.md  game_struct.md  introduction.md  inventory.md  struct_project.md  Движок.md  Интерфейс.md  Карта.md  Правила.md  Элементы_игры.md
schema_db/: create_schema.sql
src/: Makefile  game_rules.json  logger.py  main.py  pyproject.toml
src/game_engine/: api.py  configs.py  connection_protocols.py  controllers.py  game_rules_infrastructure.py  game_rules_interface.py  readme.md
src/game_engine/game_elements/: game_effects.py  game_items.py
src/game_engine/tests/: test_build_request_in_db.py  test_effect_game.py  test_game_rules_infrastructure.py  test_game_rules_interface.py  test_item_game.py
src/schema_db/: create_schema.sql  schema.md  table.md
