[project]
name = "msig"
version = "0.1.0"
description = "Многопользовательская интерактивная игра для стримеров"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2.4",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
markers = [
    "interface_rules",
    "connect_db_rules",
    "api_rules",
]
